<resources>
    <string name="app_name">ReminderX</string>

    <string name="enter_username">username</string>

    <string name="enter_password">password</string>

    <string name="enter_email">email</string>

    <string name="enter_first_name">first name</string>

    <string name="enter_last_name">last name</string>

    <string name="enter_city_name">city name</string>

    <string name="enter_street_address">street address</string>


    <string name="user_role_type">user role type</string>
    <string name="go_map_page">map</string>

    <string name="go_readme_page">README</string>

    <string name="go_register_page">register</string>

    <string name="login">login</string>
    <string name="logout">logout</string>

    <string name="register">register</string>

    <string name="get_image">choose image</string>
    <string name="take_a_picture">take a picture</string>
    <string name="README">ReminderX version 5.3 \n\nThis app is for creating remiders. It won the "Best App" competition for 2019 ;).</string>
    <string name="title_activity_map">Map</string>
    <string name="empty_fields">please choose image, username and password</string>
    <string name="wrong_username_or_password">wrong username or password</string>
    <string name="username_exist">username is already exist</string>
    <string name="image_added_successfully">image added successfully</string>
    <string name="error">internal error</string>
    <string name="wrong_extension">wrong extension</string>
    <string name="go_user_info_page">User Info</string>

    <string name="clock_reminders">clock reminders:</string>
    <string name="role_history">role history:</string>
</resources>
